# e2ee-app

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  diesel.toml
migrations/2025-11-22-024855-0000_create_users/: up.sql
migrations/2025-11-22-025959-0000_create_devices/: up.sql
migrations/2025-11-22-032133-0000_create_one_time_prekeys/: down.sql  up.sql
migrations/2025-11-22-032211-0000_create_messages/: up.sql
migrations/2025-11-22-033628-0000_create_verification_codes/: down.sql  up.sql
migrations/2025-11-23-232237-0000_edit_device_name_nullable/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/routes/v1/: devices.rs  keys.rs  messages.rs  mod.rs  register.rs
