[package]
name = "e2ee-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }